[metadata]
name = daq
summary = DAQ is a framework designed to test and operate IoT devices in an enterprise IoT environment.
license = Apache-2
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Unix
keywords =
    openflow
    openvswitch
    ryu

[files]
packages =
    daq

[pytype]
python_version = 3.6
pythonpath =
    .:
